# vamp-survivor

./: Cargo.toml
assets/: enemy.ase  floor_tileset.aseprite  player.ase
assets/projectiles/: fireball.aseprite
src/: asset_server.rs  components.rs  debug.rs  enemy.rs  entity.rs  lib.rs  main.rs  map.rs  physic.rs  player.rs  projectile.rs  render.rs  resources.rs
src/components/: gameplay.rs  mod.rs  physic.rs  render.rs  tags.rs  transform.rs
src/player/: abilities.rs  mod.rs
src/render/: mod.rs
