[package]
name = "vamp-survivor"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
rapier2d = { version = "*", features = [ "simd-stable" ] }
hecs = "0.10.5"
noise = "0.9"

[profile.dev.package.rapier3d]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3 
lto = "fat"
codegen-units = 1
panic = "abort"