[package]
name = "vamp-survivor"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"
rapier2d = { version = "*", features = [ "simd-stable" ] }
hecs = "0.10.5"
log = "0.4.28"
env_logger = "0.11.8"
futures = "0.3"

[profile.dev.package.rapier2d]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3 
lto = "fat"
codegen-units = 1
panic = "abort"